--- a/src/locales/files/bn.json
+++ b/src/locales/files/bn.json
@@ -1,15 +1,18 @@
 {
-  "title": "স্বাগত",
+  "title": "জেসিবি",
   "welcome": "QR কোড স্ক্যান করতে JCB লুব্রিকেন্ট প্যাকের ভিতরে কুপন খুঁজুন",
   "scanQr": "QR স্ক্যান করুন",
-  "coupunHisotry": "কুপন রিডিম হিসোট্রি",
+  "coupunHisotry": "কুপন ইতিহাস খালাস",
   "thankYouText": "একটি আসল JCB লুব্রিকেন্ট প্যাক কেনার জন্য আপনাকে ধন্যবাদ৷",
-  "congratsText": "অভিনন্দন! ",
-  "cashbackAmout": " রুপি{{amount}} নগদ ফেরত!!!",
-  "enterDetails": "আপনার বিবরণ লিখুন দয়া করে <strong> আপনার ক্যাশব্যাক দাবি করুন!! </strong>",
-  "upiGuidelines": "সাম্প্রতিক RBI নির্দেশিকাগুলির কারণে, IMPS এবং UPI-এর মতো ব্যাঙ্ক ট্রান্সফার যন্ত্রগুলি পরবর্তী বিজ্ঞপ্তি না দেওয়া পর্যন্ত আটকে রাখা হয়েছে৷ ",
+  "congratsText": "অভিনন্দন! তুমি জিতেছ",
+  "cashbackAmout": "টাকা{{amount}} ক্যাশব্যাক!!!",
+  "enterDetails": "<strong> আপনার ক্যাশব্যাক দাবি করতে আপনার বিবরণ লিখুন! </strong>",
+  "upiGuidelines": "RBI-এর সাম্প্রতিক নির্দেশিকাগুলির কারণে, IMPS-এর মতো ব্যাঙ্ক ট্রান্সফার যন্ত্রগুলি পরবর্তী নির্দেশ না দেওয়া পর্যন্ত স্থগিত রাখা হয়েছে৷ Paytm ওয়ালেট এবং UPI এর মাধ্যমে রিডেম্পশন(গুলি) চালিয়ে যাওয়ার জন্য আপনাকে অনুরোধ করছি।",
   "paytmWalletLabel": "পেটিএম ওয়ালেট নম্বর",
   "nameLabel": "নাম",
+  "emailLabel": "ইমেইল",
+  "phoneLabel": "ফোন নম্বর",
+  "addressLabel": "ঠিকানা",
   "accountNumberLabel": "হিসাব নাম্বার",
   "retypeAccountNumberLabel": "অ্যাকাউন্ট নম্বর পুনরায় টাইপ করুন",
   "ifscCodeLabel": "IFSC কোড",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "গ্রাহক প্রকার নির্বাচন করুন",
   "aceptTerms": "আমি সকল শর্তাবলী মেনে নিলাম",
   "followUs": "আমাদেরকে অনুসরণ করুন:",
-  "copyright": "©️ {{year}} জেসিবি ইন্ডিয়া লিমিটেড। ",
+  "copyright": "©️ {{year}} JCB ইন্ডিয়া লিমিটেড। সমস্ত অধিকার সংরক্ষিত.",
   "companyAddress": "{{address}}",
-  "cin": "সিআইএন নম্বর: {{cinNumber}}",
-  "contact": "যোগাযোগের নম্বর.: {{contactNumber}}",
-  "tollFree": "কর মুক্ত: {{tollFreeNumber}}",
+  "cin": "CIN নম্বর : {{cinNumber}}",
+  "contact": "যোগাযোগের নম্বর: {{contactNumber}}",
+  "tollFree": "টোল ফ্রি: {{tollFreeNumber}}",
   "tncHeading": "কুপন রিডেম্পশন প্রোগ্রামের জন্য স্ট্যান্ডার্ড শর্তাবলী",
   "termsConditions_1": "অফারটি JCB তেলের নির্বাচিত এমআরপি/নন-এমআরপি প্যাকগুলিতে বৈধ",
   "termsConditions_2": "অফার শুধুমাত্র মেকানিক্স বা শেষ ব্যবহারকারীদের জন্য প্রযোজ্য",
   "termsConditions_3": "এই অফারের অধীনে রিডেম্পশন 30শে সেপ্টেম্বর, 2023 পর্যন্ত বৈধ",
   "termsConditions_4": "কুপন স্ক্যান এবং রিডেম্পশনের জন্য PayTm অ্যাপ ব্যবহার করে কুপন কোড স্ক্যান করুন",
-  "termsConditions_5": "কোনো কর/সংবিধিবদ্ধ শুল্ক (যদি প্রযোজ্য হয়) অতিরিক্ত হবে",
+  "termsConditions_5": "কোনো কর/সংবিধিবদ্ধ শুল্ক (যদি প্রযোজ্য হয়) অতিরিক্ত হবে এবং বিজয়ীকে বহন করতে হবে",
   "termsConditions_6": "JCB পূর্ব বিজ্ঞপ্তি ছাড়াই যেকোন সময় এই অফারটি প্রত্যাহার বা সংশোধন করার অধিকার সংরক্ষণ করে",
   "termsConditions_7": "গ্রাহককে কোনো অর্থ প্রদান না করার জন্য JCB দায়ী থাকবে না",
   "termsConditions_8": "যেকোনো বিরোধ শুধুমাত্র মুম্বাই এখতিয়ারের অধীন এবং ভারতের আইন প্রযোজ্য হবে"
