--- a/src/locales/files/en.json
+++ b/src/locales/files/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "welcome",
+  "title": "JCB",
   "welcome": "Find the coupon inside the JCB Lubricant pack to scan the QR code",
   "scanQr": "Scan QR",
   "coupunHisotry": "Coupun Redeem Hisotry",
@@ -7,9 +7,12 @@
   "congratsText": "CONGRATULATIONS ! YOU HAVE WON",
   "cashbackAmout": " Rs.{{amount}} Cashback!!!",
   "enterDetails": "Please enter your details to <strong> claim your cashback!! </strong>",
-  "upiGuidelines": "Due to the latest RBI guidelines, Bank Transfer instruments like IMPS and UPI are put on hold till further notice. Request you to continue with redemption(s) via Paytm wallet or retain the QR Card till we bring you the other redemption methods in the coming days",
+  "upiGuidelines": "Due to the latest RBI guidelines, Bank Transfer instruments like IMPS put on hold till further notice. Request you to continue with redemption(s) via Paytm wallet and UPI.",
   "paytmWalletLabel": "Paytm Wallet Number",
   "nameLabel": "Name",
+  "emailLabel": "Email",
+  "phoneLabel": "Phone Number",
+  "addressLabel": "Address",
   "accountNumberLabel": "Account Number",
   "retypeAccountNumberLabel": "Retype Account Number",
   "ifscCodeLabel": "IFSC Code",
@@ -33,17 +36,16 @@
   "termsConditions_6": "JCB reserves the right to withdraw or amend this offer at any time without prior notice",
   "termsConditions_7": "JCB will not be held responsible for any non-payment to the customer",
   "termsConditions_8": "Any dispute is subject to Mumbai Jurisdiction only and law of India shall be applicable",
-
   "english": "English",
-  "bengali": "বাংলা",
-  "gujarati": "ગુજરાતી",
-  "hindi": "हिंदी",
-  "kannada": "ಕನ್ನಡ",
-  "malayalam": "മലയാളം",
-  "marathi": "मराठी",
-  "odia": "ଓଡିଆ",
-  "punjabi": "ਪੰਜਾਬੀ",
-  "tamil": "தமிழ்",
-  "telugu": "తెలుగు",
-  "urdu": "اردو"
+  "bengali": "Bengali",
+  "gujarati": "Gujarati",
+  "hindi": "Hindi",
+  "kannada": "Kannada",
+  "malayalam": "Malayalam",
+  "marathi": "Marathi",
+  "odia": "Odia",
+  "punjabi": "Punjabi",
+  "tamil": "Tamil",
+  "telugu": "Telugu",
+  "urdu": "Urdu"
 }
