--- a/src/locales/files/gu.json
+++ b/src/locales/files/gu.json
@@ -1,15 +1,18 @@
 {
-  "title": "સ્વાગત છે",
+  "title": "જેસીબી",
   "welcome": "QR કોડ સ્કેન કરવા માટે JCB લ્યુબ્રિકન્ટ પેકની અંદર કૂપન શોધો",
   "scanQr": "QR સ્કેન કરો",
   "coupunHisotry": "કૂપન રિડીમ ઇતિહાસ",
   "thankYouText": "અસલ જેસીબી લ્યુબ્રિકન્ટ પેક ખરીદવા બદલ આભાર.",
-  "congratsText": "અભિનંદન! ",
-  "cashbackAmout": " રૂ.{{amount}} પાછા આવેલા પૈસા!!!",
-  "enterDetails": "કૃપા કરીને તમારી વિગતો દાખલ કરો <strong> તમારા કેશબેકનો દાવો કરો!! </strong>",
-  "upiGuidelines": "RBIની તાજેતરની માર્ગદર્શિકાને કારણે, IMPS અને UPI જેવા બેંક ટ્રાન્સફર સાધનોને આગળની સૂચના સુધી હોલ્ડ પર રાખવામાં આવ્યા છે. ",
+  "congratsText": "અભિનંદન! તું જીતી ગયો",
+  "cashbackAmout": "રૂ.{{amount}} કેશબેક!!!",
+  "enterDetails": "<strong> તમારા કેશબેકનો દાવો કરવા માટે કૃપા કરીને તમારી વિગતો દાખલ કરો!! </strong>",
+  "upiGuidelines": "RBIની તાજેતરની માર્ગદર્શિકાને કારણે, IMPS જેવા બેંક ટ્રાન્સફર ઇન્સ્ટ્રુમેન્ટ્સ આગળની સૂચના સુધી હોલ્ડ પર રાખવામાં આવ્યા છે. તમને Paytm વૉલેટ અને UPI મારફત રિડેમ્પશન ચાલુ રાખવા વિનંતી છે.",
   "paytmWalletLabel": "પેટીએમ વોલેટ નંબર",
   "nameLabel": "નામ",
+  "emailLabel": "ઈમેલ",
+  "phoneLabel": "ફોન નંબર",
+  "addressLabel": "સરનામું",
   "accountNumberLabel": "ખાતા નંબર",
   "retypeAccountNumberLabel": "એકાઉન્ટ નંબર ફરીથી લખો",
   "ifscCodeLabel": "IFSC કોડ",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "ગ્રાહક પ્રકાર પસંદ કરો",
   "aceptTerms": "હું નિયમો અને શરતો સ્વીકારું છું",
   "followUs": "પર અમને અનુસરો:",
-  "copyright": "©️ {{year}} જેસીબી ઈન્ડિયા લિમિટેડ ",
+  "copyright": "©️ {{year}} JCB ઇન્ડિયા લિમિટેડ. બધા હકો અમારી પાસે રાખેલા છે.",
   "companyAddress": "{{address}}",
-  "cin": "CIN નંબર: {{cinNumber}}",
-  "contact": "સંપર્ક નં.: {{contactNumber}}",
-  "tollFree": "કર મુક્ત: {{tollFreeNumber}}",
+  "cin": "CIN નંબર : {{cinNumber}}",
+  "contact": "સંપર્ક નંબર: {{contactNumber}}",
+  "tollFree": "ટોલ ફ્રી: {{tollFreeNumber}}",
   "tncHeading": "કૂપન રીડેમ્પશન પ્રોગ્રામ માટે માનક નિયમો અને શરતો",
   "termsConditions_1": "ઓફર જેસીબી તેલના પસંદગીના MRP/નોન-MRP પેક પર માન્ય છે",
   "termsConditions_2": "ઑફર માત્ર મિકેનિક્સ અથવા અંતિમ વપરાશકર્તાઓ માટે જ લાગુ પડે છે",
   "termsConditions_3": "આ ઑફર હેઠળ રિડેમ્પશન 30મી સપ્ટેમ્બર, 2023 સુધી માન્ય છે",
   "termsConditions_4": "સ્કેનિંગ અને કૂપન્ટના રિડેમ્પશન માટે કૃપા કરીને PayTm એપ્લિકેશનનો ઉપયોગ કરીને કૂપન કોડ સ્કેન કરો",
-  "termsConditions_5": "કોઈપણ કર/ વૈધાનિક વસૂલાત (જો લાગુ હોય તો) વધારાના હશે",
+  "termsConditions_5": "કોઈપણ કર/ વૈધાનિક વસૂલાત (જો લાગુ હોય તો) વધારાના હશે અને વિજેતા દ્વારા ઉઠાવવામાં આવશે",
   "termsConditions_6": "JCB આ ઓફરને કોઈપણ સમયે આગોતરી સૂચના આપ્યા વિના પાછી ખેંચવાનો અથવા તેમાં સુધારો કરવાનો અધિકાર અનામત રાખે છે",
   "termsConditions_7": "ગ્રાહકને ચૂકવણી ન કરવા માટે JCB જવાબદાર રહેશે નહીં",
   "termsConditions_8": "કોઈપણ વિવાદ માત્ર મુંબઈ અધિકારક્ષેત્રને આધીન છે અને ભારતનો કાયદો લાગુ પડશે"
