--- a/src/locales/files/hi.json
+++ b/src/locales/files/hi.json
@@ -1,34 +1,37 @@
 {
-  "title": "स्वागत",
+  "title": "जेसीबी",
   "welcome": "क्यूआर कोड को स्कैन करने के लिए जेसीबी लुब्रिकेंट पैक के अंदर कूपन खोजें",
   "scanQr": "क्यूआर स्कैन करें",
   "coupunHisotry": "कूपन रिडीम हिसोट्री",
   "thankYouText": "मूल JCB लुब्रिकेंट पैक खरीदने के लिए धन्यवाद।",
-  "congratsText": "बधाई हो ! ",
-  "cashbackAmout": " रु.{{amount}} नकदी वापस!!!",
-  "enterDetails": "कृपया अपना विवरण दर्ज करें <strong> अपने कैशबैक का दावा करें !! </strong>",
-  "upiGuidelines": "आरबीआई के नवीनतम दिशानिर्देशों के कारण, आईएमपीएस और यूपीआई जैसे बैंक ट्रांसफर उपकरणों को अगली सूचना तक रोक दिया गया है। ",
+  "congratsText": "बधाई हो ! आप जीत लिये हैं",
+  "cashbackAmout": "रु.{{amount}} कैशबैक!!!",
+  "enterDetails": "<strong> अपने कैशबैक का दावा करने के लिए कृपया अपना विवरण दर्ज करें!! </मजबूत>",
+  "upiGuidelines": "भारतीय रिजर्व बैंक के नवीनतम दिशानिर्देशों के कारण, आईएमपीएस जैसे बैंक हस्तांतरण उपकरणों को अगली सूचना तक रोक दिया गया है। आपसे अनुरोध है कि पेटीएम वॉलेट और यूपीआई के माध्यम से रिडेम्पशन जारी रखें।",
   "paytmWalletLabel": "पेटीएम वॉलेट नंबर",
   "nameLabel": "नाम",
+  "emailLabel": "ईमेल",
+  "phoneLabel": "फ़ोन नंबर",
+  "addressLabel": "पता",
   "accountNumberLabel": "खाता संख्या",
   "retypeAccountNumberLabel": "खाता संख्या फिर से टाइप करें",
   "ifscCodeLabel": "आईएफएससी कोड",
   "selectStateLabel": "राज्य चुनें",
   "selectCityLabel": "शहर चुनें",
   "selectCustomerTypeLabel": "ग्राहक प्रकार का चयन करें",
-  "aceptTerms": "मैं नियमों और शर्तों को स्वीकार करता हूँ",
-  "followUs": "हमारा अनुसरण इस पर कीजिये:",
-  "copyright": "©️ {{year}} जेसीबी इंडिया लिमिटेड। ",
+  "aceptTerms": "मुझे नियम और शर्तें स्वीकार हैं",
+  "followUs": "पर हमें का पालन करें:",
+  "copyright": "©️ {{वर्ष}} जेसीबी इंडिया लिमिटेड। सर्वाधिकार सुरक्षित।",
   "companyAddress": "{{address}}",
-  "cin": "सीआईएन संख्या : {{cinNumber}}",
-  "contact": "संपर्क नंबर।: {{contactNumber}}",
+  "cin": "सीआईएन नंबर : {{cinNumber}}",
+  "contact": "संपर्क नंबर: {{contactNumber}}",
   "tollFree": "टोल फ्री: {{tollFreeNumber}}",
   "tncHeading": "कूपन मोचन कार्यक्रम के लिए मानक नियम और शर्तें",
   "termsConditions_1": "ऑफर जेसीबी ऑयल्स के चुनिंदा एमआरपी/नॉन-एमआरपी पैक पर मान्य है",
   "termsConditions_2": "ऑफ़र केवल यांत्रिकी या अंतिम उपयोगकर्ताओं के लिए लागू है",
   "termsConditions_3": "इस ऑफर के तहत रिडेम्पशन 30 सितंबर, 2023 तक वैध है",
   "termsConditions_4": "कृपया कूपन को स्कैन करने और रिडीम करने के लिए PayTm ऐप का उपयोग करके कूपन कोड को स्कैन करें",
-  "termsConditions_5": "कोई भी कर/सांविधिक शुल्क (यदि लागू हो) अतिरिक्त होगा",
+  "termsConditions_5": "कोई भी कर/सांविधिक शुल्क (यदि लागू हो) अतिरिक्त होगा और विजेता द्वारा वहन किया जाएगा",
   "termsConditions_6": "जेसीबी बिना किसी पूर्व सूचना के किसी भी समय इस प्रस्ताव को वापस लेने या संशोधित करने का अधिकार सुरक्षित रखता है",
   "termsConditions_7": "ग्राहक को भुगतान न करने के लिए JCB को जिम्मेदार नहीं ठहराया जाएगा",
   "termsConditions_8": "कोई भी विवाद केवल मुंबई क्षेत्राधिकार के अधीन है और भारत का कानून लागू होगा"
