--- a/src/locales/files/kn.json
+++ b/src/locales/files/kn.json
@@ -1,15 +1,18 @@
 {
-  "title": "ಸ್ವಾಗತ",
+  "title": "ಜೆಸಿಬಿ",
   "welcome": "QR ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಲು JCB ಲೂಬ್ರಿಕಂಟ್ ಪ್ಯಾಕ್‌ನಲ್ಲಿರುವ ಕೂಪನ್ ಅನ್ನು ಹುಡುಕಿ",
   "scanQr": "QR ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿ",
-  "coupunHisotry": "ಕೂಪನ್ ರಿಡೀಮ್ ಹಿಸೊಟ್ರಿ",
+  "coupunHisotry": "ಕೂಪನ್ ರಿಡೀಮ್ ಹಿಸ್ಟೋರಿ",
   "thankYouText": "ಮೂಲ JCB ಲೂಬ್ರಿಕಂಟ್ ಪ್ಯಾಕ್ ಅನ್ನು ಖರೀದಿಸಿದ್ದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು.",
-  "congratsText": "ಅಭಿನಂದನೆಗಳು ! ",
-  "cashbackAmout": " ರೂ.{{amount}} ಕ್ಯಾಶ್ಬ್ಯಾಕ್!!!",
-  "enterDetails": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ವಿವರಗಳನ್ನು ನಮೂದಿಸಿ <strong> ನಿಮ್ಮ ಕ್ಯಾಶ್‌ಬ್ಯಾಕ್ ಅನ್ನು ಪಡೆದುಕೊಳ್ಳಿ!! </strong>",
-  "upiGuidelines": "ಇತ್ತೀಚಿನ RBI ಮಾರ್ಗಸೂಚಿಗಳ ಕಾರಣದಿಂದಾಗಿ, IMPS ಮತ್ತು UPI ನಂತಹ ಬ್ಯಾಂಕ್ ವರ್ಗಾವಣೆ ಸಾಧನಗಳನ್ನು ಮುಂದಿನ ಸೂಚನೆಯವರೆಗೆ ತಡೆಹಿಡಿಯಲಾಗಿದೆ. ",
+  "congratsText": "ಅಭಿನಂದನೆಗಳು ! ನೀವು ವೀಜೆತರಾಗಿದ್ದೀರಿ",
+  "cashbackAmout": "ರೂ.{{amount}} ಕ್ಯಾಶ್‌ಬ್ಯಾಕ್!!!",
+  "enterDetails": "<strong> ನಿಮ್ಮ ಕ್ಯಾಶ್‌ಬ್ಯಾಕ್ ಪಡೆಯಲು </strong> ದಯವಿಟ್ಟು ನಿಮ್ಮ ವಿವರಗಳನ್ನು ನಮೂದಿಸಿ!!",
+  "upiGuidelines": "ಇತ್ತೀಚಿನ RBI ಮಾರ್ಗಸೂಚಿಗಳ ಕಾರಣದಿಂದಾಗಿ, IMPS ನಂತಹ ಬ್ಯಾಂಕ್ ವರ್ಗಾವಣೆ ಸಾಧನಗಳನ್ನು ಮುಂದಿನ ಸೂಚನೆಯವರೆಗೆ ತಡೆಹಿಡಿಯಲಾಗಿದೆ. Paytm ವ್ಯಾಲೆಟ್ ಮತ್ತು UPI ಮೂಲಕ ವಿಮೋಚನೆ(ಗಳನ್ನು) ಮುಂದುವರಿಸಲು ನಿಮ್ಮನ್ನು ವಿನಂತಿಸಿ.",
   "paytmWalletLabel": "Paytm ವಾಲೆಟ್ ಸಂಖ್ಯೆ",
   "nameLabel": "ಹೆಸರು",
+  "emailLabel": "ಇಮೇಲ್",
+  "phoneLabel": "ದೂರವಾಣಿ ಸಂಖ್ಯೆ",
+  "addressLabel": "ವಿಳಾಸ",
   "accountNumberLabel": "ಖಾತೆ ಸಂಖ್ಯೆ",
   "retypeAccountNumberLabel": "ಖಾತೆ ಸಂಖ್ಯೆಯನ್ನು ಮತ್ತೆ ಟೈಪ್ ಮಾಡಿ",
   "ifscCodeLabel": "IFSC ಕೋಡ್",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "ಗ್ರಾಹಕ ಪ್ರಕಾರವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
   "aceptTerms": "ನಾನು ನಿಯಮ ಮತ್ತು ಷರತ್ತುಗಳಿಗೆ ಒಪ್ಪಿದೇನೆ",
   "followUs": "ನಮ್ಮನ್ನು ಹಿಂಬಾಲಿಸಿ:",
-  "copyright": "©️ {{year}} ಜೆಸಿಬಿ ಇಂಡಿಯಾ ಲಿಮಿಟೆಡ್. ",
+  "copyright": "©️ {{year}} JCB ಇಂಡಿಯಾ ಲಿಮಿಟೆಡ್. ಎಲ್ಲ ಹಕ್ಕುಗಳನ್ನು ಕಾಯ್ದಿರಿಸಲಾಗಿದೆ.",
   "companyAddress": "{{address}}",
-  "cin": "CIN ಸಂಖ್ಯೆ: {{cinNumber}}",
-  "contact": "ಸಂಪರ್ಕ ಸಂಖ್ಯೆ.: {{contactNumber}}",
-  "tollFree": "ಶುಲ್ಕರಹಿತ: {{tollFreeNumber}}",
+  "cin": "CIN ಸಂಖ್ಯೆ : {{cinNumber}}",
+  "contact": "ಸಂಪರ್ಕ ಸಂಖ್ಯೆ: {{contactNumber}}",
+  "tollFree": "ಟೋಲ್ ಫ್ರೀ: {{tollFreeNumber}}",
   "tncHeading": "ಕೂಪನ್ ರಿಡೆಂಪ್ಶನ್ ಪ್ರೋಗ್ರಾಂಗೆ ಪ್ರಮಾಣಿತ ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳು",
   "termsConditions_1": "ಜೆಸಿಬಿ ತೈಲಗಳ ಆಯ್ದ MRP/MRP ಅಲ್ಲದ ಪ್ಯಾಕ್‌ಗಳಲ್ಲಿ ಆಫರ್ ಮಾನ್ಯವಾಗಿರುತ್ತದೆ",
   "termsConditions_2": "ಆಫರ್ ಮೆಕ್ಯಾನಿಕ್ಸ್ ಅಥವಾ ಅಂತಿಮ ಬಳಕೆದಾರರಿಗೆ ಮಾತ್ರ ಅನ್ವಯಿಸುತ್ತದೆ",
   "termsConditions_3": "ಈ ಕೊಡುಗೆಯ ಅಡಿಯಲ್ಲಿ ರಿಡೆಂಪ್ಶನ್ 30ನೇ ಸೆಪ್ಟೆಂಬರ್, 2023 ರವರೆಗೆ ಮಾನ್ಯವಾಗಿರುತ್ತದೆ",
   "termsConditions_4": "ಕೂಪಂಟ್‌ಗಳನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಲು ಮತ್ತು ಪಡೆದುಕೊಳ್ಳಲು PayTm ಅಪ್ಲಿಕೇಶನ್ ಬಳಸಿಕೊಂಡು ಕೂಪನ್ ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿ",
-  "termsConditions_5": "ಯಾವುದೇ ತೆರಿಗೆಗಳು/ಕಾನೂನುಬದ್ಧ ಲೆವಿಗಳು (ಅನ್ವಯಿಸಿದರೆ) ಹೆಚ್ಚುವರಿಯಾಗಿರುತ್ತದೆ",
+  "termsConditions_5": "ಯಾವುದೇ ತೆರಿಗೆಗಳು/ಕಾನೂನುಬದ್ಧ ಲೆವಿಗಳು (ಅನ್ವಯಿಸಿದರೆ) ಹೆಚ್ಚುವರಿ ಮತ್ತು ವಿಜೇತರು ಭರಿಸಬೇಕಾಗುತ್ತದೆ",
   "termsConditions_6": "ಯಾವುದೇ ಸಮಯದಲ್ಲಿ ಪೂರ್ವ ಸೂಚನೆ ಇಲ್ಲದೆಯೇ ಈ ಕೊಡುಗೆಯನ್ನು ಹಿಂತೆಗೆದುಕೊಳ್ಳುವ ಅಥವಾ ತಿದ್ದುಪಡಿ ಮಾಡುವ ಹಕ್ಕನ್ನು JCB ಕಾಯ್ದಿರಿಸಿಕೊಂಡಿದೆ",
   "termsConditions_7": "ಗ್ರಾಹಕರಿಗೆ ಯಾವುದೇ ಪಾವತಿ ಮಾಡದಿದ್ದಲ್ಲಿ ಜೆಸಿಬಿ ಹೊಣೆಯಾಗುವುದಿಲ್ಲ",
   "termsConditions_8": "ಯಾವುದೇ ವಿವಾದವು ಮುಂಬೈ ನ್ಯಾಯವ್ಯಾಪ್ತಿಗೆ ಮಾತ್ರ ಒಳಪಟ್ಟಿರುತ್ತದೆ ಮತ್ತು ಭಾರತದ ಕಾನೂನು ಅನ್ವಯಿಸುತ್ತದೆ"
