--- a/src/locales/files/ur.json
+++ b/src/locales/files/ur.json
@@ -1,15 +1,18 @@
 {
-  "title": "خوش آمدید",
+  "title": "جے سی بی",
   "welcome": "QR کوڈ کو اسکین کرنے کے لیے JCB لبریکینٹ پیک کے اندر کوپن تلاش کریں۔",
   "scanQr": "QR اسکین کریں۔",
   "coupunHisotry": "کوپن ریڈیم ہسٹری",
   "thankYouText": "ایک اصل JCB لبریکینٹ پیک خریدنے کے لیے آپ کا شکریہ۔",
-  "congratsText": "مبارک ہو! ",
-  "cashbackAmout": " روپے{{amount}} پیسے واپس!!!",
-  "enterDetails": "براہ کرم اپنی تفصیلات درج کریں۔ <strong> اپنے کیش بیک کا دعوی کریں!! </strong>",
-  "upiGuidelines": "RBI کے تازہ ترین رہنما خطوط کی وجہ سے، IMPS اور UPI جیسے بینک ٹرانسفر آلات کو اگلے نوٹس تک روک دیا گیا ہے۔ ",
+  "congratsText": "مبارک ہو! تم جیت گئے",
+  "cashbackAmout": "روپے{{amount}} کیش بیک!!!",
+  "enterDetails": "<strong> اپنے کیش بیک کا دعوی کرنے کے لیے براہ کرم اپنی تفصیلات درج کریں!! </strong>",
+  "upiGuidelines": "RBI کے تازہ ترین رہنما خطوط کی وجہ سے، IMPS جیسے بینک ٹرانسفر آلات کو اگلے نوٹس تک روک دیا گیا ہے۔ آپ سے گزارش ہے کہ Paytm والیٹ اور UPI کے ذریعے ریڈیمپشن جاری رکھیں۔",
   "paytmWalletLabel": "Paytm والیٹ نمبر",
   "nameLabel": "نام",
+  "emailLabel": "ای میل",
+  "phoneLabel": "فون نمبر",
+  "addressLabel": "پتہ",
   "accountNumberLabel": "اکاؤنٹ نمبر",
   "retypeAccountNumberLabel": "اکاؤنٹ نمبر دوبارہ ٹائپ کریں۔",
   "ifscCodeLabel": "IFSC کوڈ",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "کسٹمر کی قسم منتخب کریں۔",
   "aceptTerms": "میں قوائد و ضوابط کو قبول کرتا ہوں",
   "followUs": "ہماری پیروی کریں:",
-  "copyright": "©️ {{year}} جے سی بی انڈیا لمیٹڈ۔ ",
+  "copyright": "©️ {{year}} JCB انڈیا لمیٹڈ۔ جملہ حقوق محفوظ ہیں.",
   "companyAddress": "{{address}}",
-  "cin": "CIN نمبر: {{cinNumber}}",
-  "contact": "رابطے کا نمبر.: {{contactNumber}}",
+  "cin": "CIN نمبر : {{cinNumber}}",
+  "contact": "رابطہ نمبر: {{contactNumber}}",
   "tollFree": "ٹول فری: {{tollFreeNumber}}",
   "tncHeading": "کوپن ریڈیمپشن پروگرام کے لیے معیاری شرائط و ضوابط",
   "termsConditions_1": "پیشکش JCB تیلوں کے منتخب MRP/Non-MRP پیک پر درست ہے۔",
   "termsConditions_2": "پیشکش صرف مکینکس یا آخری صارفین کے لیے لاگو ہے۔",
   "termsConditions_3": "اس پیشکش کے تحت ریڈیمپشن 30 ستمبر 2023 تک درست ہے۔",
   "termsConditions_4": "کوپن کو اسکین کرنے اور چھڑانے کے لیے براہ کرم PayTm ایپ کا استعمال کرتے ہوئے کوپن کوڈ اسکین کریں۔",
-  "termsConditions_5": "کوئی بھی ٹیکس/قانونی محصول (اگر قابل اطلاق ہو) اضافی ہوں گے۔",
+  "termsConditions_5": "کوئی بھی ٹیکس/قانونی محصول (اگر قابل اطلاق ہو) اضافی ہوں گے اور فاتح کو برداشت کرنا پڑے گا",
   "termsConditions_6": "جے سی بی پیشگی اطلاع کے بغیر کسی بھی وقت اس پیشکش کو واپس لینے یا اس میں ترمیم کرنے کا حق محفوظ رکھتا ہے۔",
   "termsConditions_7": "گاہک کو کسی بھی عدم ادائیگی کے لیے JCB ذمہ دار نہیں ہوگا۔",
   "termsConditions_8": "کوئی بھی تنازعہ صرف ممبئی کے دائرہ اختیار سے مشروط ہے اور ہندوستان کا قانون لاگو ہوگا۔"
