--- a/src/locales/files/mr.json
+++ b/src/locales/files/mr.json
@@ -1,15 +1,18 @@
 {
-  "title": "स्वागत",
+  "title": "जेसीबी",
   "welcome": "QR कोड स्कॅन करण्यासाठी JCB लुब्रिकंट पॅकमध्ये कूपन शोधा",
   "scanQr": "QR स्कॅन करा",
   "coupunHisotry": "कूपन रिडीम इतिहास",
   "thankYouText": "मूळ जेसीबी ल्युब्रिकंट पॅक खरेदी केल्याबद्दल धन्यवाद.",
-  "congratsText": "अभिनंदन! ",
-  "cashbackAmout": " रु.{{amount}} पैसे परत!!!",
-  "enterDetails": "कृपया आपले तपशील प्रविष्ट करा <strong> तुमच्या कॅशबॅकचा दावा करा!! </strong>",
-  "upiGuidelines": "RBI च्या नवीनतम मार्गदर्शक तत्त्वांमुळे, IMPS आणि UPI सारखी बँक हस्तांतरण साधने पुढील सूचना मिळेपर्यंत होल्डवर ठेवली आहेत. ",
+  "congratsText": "अभिनंदन! तुम्ही जिंकलात",
+  "cashbackAmout": "रु.{{amount}} कॅशबॅक!!!",
+  "enterDetails": "कृपया <strong> तुमच्या कॅशबॅकवर दावा करण्यासाठी तुमचे तपशील प्रविष्ट करा!! </strong>",
+  "upiGuidelines": "RBI च्या नवीनतम मार्गदर्शक तत्त्वांमुळे, IMPS सारखी बँक हस्तांतरण साधने पुढील सूचना मिळेपर्यंत होल्डवर ठेवली आहेत. पेटीएम वॉलेट आणि UPI द्वारे रिडेम्प्शन(चे) सुरू ठेवण्याची तुम्हाला विनंती आहे.",
   "paytmWalletLabel": "पेटीएम वॉलेट नंबर",
   "nameLabel": "नाव",
+  "emailLabel": "ईमेल",
+  "phoneLabel": "फोन नंबर",
+  "addressLabel": "पत्ता",
   "accountNumberLabel": "खाते क्रमांक",
   "retypeAccountNumberLabel": "खाते क्रमांक पुन्हा टाइप करा",
   "ifscCodeLabel": "IFSC कोड",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "ग्राहक प्रकार निवडा",
   "aceptTerms": "मी अटी आणि शर्ती मान्य करते",
   "followUs": "आमचे अनुसरण करा:",
-  "copyright": "©️ {{year}} जेसीबी इंडिया लिमिटेड. ",
-  "companyAddress": "{{address}}",
-  "cin": "CIN क्रमांक: {{cinNumber}}",
+  "copyright": "©️ {{वर्ष}} जेसीबी इंडिया लिमिटेड. सर्व हक्क राखीव.",
+  "companyAddress": "{{पत्ता}}",
+  "cin": "CIN क्रमांक : {{cinNumber}}",
   "contact": "संपर्क क्रमांक: {{contactNumber}}",
-  "tollFree": "कर मुक्त: {{tollFreeNumber}}",
+  "tollFree": "टोल फ्री: {{tollFreeNumber}}",
   "tncHeading": "कूपन विमोचन कार्यक्रमासाठी मानक अटी आणि नियम",
   "termsConditions_1": "ऑफर जेसीबी तेलांच्या निवडक MRP/नॉन-MRP पॅकवर वैध आहे",
   "termsConditions_2": "ऑफर फक्त मेकॅनिक्स किंवा अंतिम वापरकर्त्यांसाठी लागू आहे",
   "termsConditions_3": "या ऑफर अंतर्गत रिडेम्प्शन 30 सप्टेंबर 2023 पर्यंत वैध आहे",
   "termsConditions_4": "कृपया कूपन स्कॅनिंग आणि रिडेम्प्शनसाठी पेटीएम अॅप वापरून कूपन कोड स्कॅन करा",
-  "termsConditions_5": "कोणतेही कर/वैधानिक शुल्क (लागू असल्यास) अतिरिक्त असेल",
+  "termsConditions_5": "कोणतेही कर/वैधानिक शुल्क (लागू असल्यास) जादा असेल आणि विजेत्याने भरावे",
   "termsConditions_6": "पूर्वसूचना न देता कोणत्याही वेळी ही ऑफर मागे घेण्याचा किंवा त्यात सुधारणा करण्याचा अधिकार JCB राखून ठेवते",
   "termsConditions_7": "ग्राहकाला पैसे न दिल्यास जेसीबी जबाबदार राहणार नाही",
   "termsConditions_8": "कोणताही विवाद केवळ मुंबईच्या अधिकारक्षेत्राच्या अधीन आहे आणि भारताचा कायदा लागू असेल"
