--- a/src/locales/files/ta.json
+++ b/src/locales/files/ta.json
@@ -1,15 +1,18 @@
 {
-  "title": "வரவேற்பு",
+  "title": "ஜேசிபி",
   "welcome": "QR குறியீட்டை ஸ்கேன் செய்ய JCB லூப்ரிகண்ட் பேக்கிற்குள் இருக்கும் கூப்பனைக் கண்டறியவும்",
   "scanQr": "QR ஐ ஸ்கேன் செய்யவும்",
   "coupunHisotry": "கூப்பன் ரிடீம் ஹிசோட்ரி",
   "thankYouText": "அசல் JCB லூப்ரிகன்ட் பேக்கை வாங்கியதற்கு நன்றி.",
-  "congratsText": "வாழ்த்துகள் ! ",
-  "cashbackAmout": " ரூ.{{amount}} பணம் மீளப்பெறல்!!!",
-  "enterDetails": "உங்கள் விவரங்களை உள்ளிடவும் <strong> உங்கள் கேஷ்பேக்கைக் கோருங்கள்!! </strong>",
-  "upiGuidelines": "சமீபத்திய RBI வழிகாட்டுதல்களின் காரணமாக, IMPS மற்றும் UPI போன்ற வங்கி பரிமாற்ற கருவிகள் மறு அறிவிப்பு வரும் வரை நிறுத்தி வைக்கப்பட்டுள்ளன. ",
+  "congratsText": "வாழ்த்துகள் ! நீ வெற்றி பெற்றுவிட்டாய்",
+  "cashbackAmout": "ரூ.{{amount}} கேஷ்பேக்!!!",
+  "enterDetails": "உங்கள் கேஷ்பேக்கை <strong> பெற உங்கள் விவரங்களை உள்ளிடவும்!! </strong>",
+  "upiGuidelines": "சமீபத்திய RBI வழிகாட்டுதல்கள் காரணமாக, IMPS போன்ற வங்கி பரிமாற்ற கருவிகள் மறு அறிவிப்பு வரும் வரை நிறுத்தி வைக்கப்பட்டுள்ளன. Paytm வாலட் மற்றும் UPI மூலம் மீட்பைத் தொடர உங்களைக் கேட்டுக்கொள்கிறேன்.",
   "paytmWalletLabel": "Paytm வாலட் எண்",
   "nameLabel": "பெயர்",
+  "emailLabel": "மின்னஞ்சல்",
+  "phoneLabel": "தொலைபேசி எண்",
+  "addressLabel": "முகவரி",
   "accountNumberLabel": "கணக்கு எண்",
   "retypeAccountNumberLabel": "கணக்கு எண்ணை மீண்டும் தட்டச்சு செய்யவும்",
   "ifscCodeLabel": "IFSC குறியீடு",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "வாடிக்கையாளர் வகையைத் தேர்ந்தெடுக்கவும்",
   "aceptTerms": "நான் நியதிகளும் நிபந்தனைகள் ஒத்துகொள்கிறேன்",
   "followUs": "எங்களை பின்தொடரவும்:",
-  "copyright": "©️ {{year}} ஜேசிபி இந்தியா லிமிடெட். ",
+  "copyright": "©️ {{year}} JCB இந்தியா லிமிடெட். அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை.",
   "companyAddress": "{{address}}",
-  "cin": "சிஐஎன் எண்: {{cinNumber}}",
-  "contact": "தொடர்பு எண்.: {{contactNumber}}",
+  "cin": "CIN எண் : {{cinNumber}}",
+  "contact": "தொடர்பு எண்: {{contactNumber}}",
   "tollFree": "கட்டணமில்லா: {{tollFreeNumber}}",
   "tncHeading": "கூப்பன் மீட்பு திட்டத்திற்கான நிலையான விதிமுறைகள் மற்றும் நிபந்தனைகள்",
   "termsConditions_1": "தேர்ந்தெடுக்கப்பட்ட எம்ஆர்பி/எம்ஆர்பி அல்லாத ஜேசிபி எண்ணெய் பொதிகளில் சலுகை செல்லுபடியாகும்",
   "termsConditions_2": "மெக்கானிக்ஸ் அல்லது இறுதிப் பயனர்களுக்கு மட்டுமே சலுகை பொருந்தும்",
   "termsConditions_3": "இந்தச் சலுகையின் கீழ் திரும்பப் பெறுதல் 30 செப்டம்பர் 2023 வரை செல்லுபடியாகும்",
   "termsConditions_4": "கூப்பன்களை ஸ்கேன் செய்வதற்கும் மீட்டெடுப்பதற்கும் PayTm பயன்பாட்டைப் பயன்படுத்தி கூப்பன் குறியீட்டை ஸ்கேன் செய்யவும்",
-  "termsConditions_5": "ஏதேனும் வரிகள்/சட்டரீதியான வரிகள் (பொருந்தினால்) கூடுதலாக இருக்கும்",
+  "termsConditions_5": "ஏதேனும் வரிகள்/சட்டரீதியான வரிகள் (பொருந்தினால்) கூடுதல் மற்றும் வெற்றியாளரால் ஏற்கப்படும்",
   "termsConditions_6": "எந்த நேரத்திலும் முன்னறிவிப்பின்றி இந்தச் சலுகையைத் திரும்பப் பெறவோ அல்லது திருத்தவோ JCBக்கு உரிமை உண்டு",
   "termsConditions_7": "வாடிக்கையாளருக்கு பணம் செலுத்தாததற்கு JCB பொறுப்பேற்காது",
   "termsConditions_8": "எந்தவொரு சர்ச்சையும் மும்பை அதிகார வரம்பிற்கு உட்பட்டது மற்றும் இந்தியாவின் சட்டம் பொருந்தும்"
