--- a/src/locales/files/te.json
+++ b/src/locales/files/te.json
@@ -1,15 +1,18 @@
 {
-  "title": "స్వాగతం",
+  "title": "JCB",
   "welcome": "QR కోడ్‌ను స్కాన్ చేయడానికి JCB లూబ్రికెంట్ ప్యాక్‌లోని కూపన్‌ను కనుగొనండి",
   "scanQr": "QRని స్కాన్ చేయండి",
   "coupunHisotry": "కూపన్ రీడీమ్ హిసోట్రి",
   "thankYouText": "అసలు JCB లూబ్రికెంట్ ప్యాక్‌ని కొనుగోలు చేసినందుకు ధన్యవాదాలు.",
-  "congratsText": "అభినందనలు ! ",
-  "cashbackAmout": " రూ.{{amount}} డబ్బు వాపసు!!!",
-  "enterDetails": "దయచేసి మీ వివరాలను నమోదు చేయండి <strong> మీ క్యాష్‌బ్యాక్ క్లెయిమ్ చేయండి!! </strong>",
-  "upiGuidelines": "తాజా RBI మార్గదర్శకాల కారణంగా, IMPS మరియు UPI వంటి బ్యాంక్ బదిలీ సాధనాలు తదుపరి నోటీసు వచ్చే వరకు నిలిపివేయబడ్డాయి. ",
+  "congratsText": "అభినందనలు ! మీరు గెలిచారు",
+  "cashbackAmout": "రూ.{{amount}} క్యాష్‌బ్యాక్!!!",
+  "enterDetails": "దయచేసి <strong> మీ క్యాష్‌బ్యాక్‌ను క్లెయిమ్ చేయడానికి మీ వివరాలను నమోదు చేయండి!! </strong>",
+  "upiGuidelines": "తాజా RBI మార్గదర్శకాల కారణంగా, IMPS వంటి బ్యాంక్ బదిలీ సాధనాలు తదుపరి నోటీసు వచ్చే వరకు నిలిపివేయబడ్డాయి. Paytm వాలెట్ మరియు UPI ద్వారా విమోచన(ల)ను కొనసాగించమని మిమ్మల్ని అభ్యర్థిస్తున్నాను.",
   "paytmWalletLabel": "Paytm వాలెట్ నంబర్",
   "nameLabel": "పేరు",
+  "emailLabel": "ఇమెయిల్",
+  "phoneLabel": "ఫోను నంబరు",
+  "addressLabel": "చిరునామా",
   "accountNumberLabel": "ఖాతా సంఖ్య",
   "retypeAccountNumberLabel": "ఖాతా సంఖ్యను మళ్లీ టైప్ చేయండి",
   "ifscCodeLabel": "IFSC కోడ్",
@@ -18,17 +21,17 @@
   "selectCustomerTypeLabel": "కస్టమర్ రకాన్ని ఎంచుకోండి",
   "aceptTerms": "నిబంధనలు మరియు షరతులు అంగీకరిస్తున్నాను",
   "followUs": "మమ్మల్ని అనుసరించండి:",
-  "copyright": "©️ {{year}} JCB ఇండియా లిమిటెడ్. ",
+  "copyright": "©️ {{year}} JCB ఇండియా లిమిటెడ్. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి.",
   "companyAddress": "{{address}}",
-  "cin": "CIN నంబర్: {{cinNumber}}",
-  "contact": "సంప్రదింపులకు నంబర్.: {{contactNumber}}",
+  "cin": "CIN నంబర్ : {{cinNumber}}",
+  "contact": "సంప్రదింపు సంఖ్య: {{contactNumber}}",
   "tollFree": "టోల్ ఫ్రీ: {{tollFreeNumber}}",
   "tncHeading": "కూపన్ రిడెంప్షన్ ప్రోగ్రామ్ కోసం ప్రామాణిక నిబంధనలు మరియు షరతులు",
   "termsConditions_1": "ఎంపిక చేసిన MRP/MRP కాని JCB నూనెల ప్యాక్‌లపై ఆఫర్ చెల్లుతుంది",
   "termsConditions_2": "ఆఫర్ మెకానిక్స్ లేదా తుది వినియోగదారులకు మాత్రమే వర్తిస్తుంది",
   "termsConditions_3": "ఈ ఆఫర్ కింద రిడెంప్షన్ 30 సెప్టెంబర్, 2023 వరకు చెల్లుతుంది",
   "termsConditions_4": "దయచేసి కూపన్‌ల స్కానింగ్ మరియు రీడెంప్షన్ కోసం PayTm యాప్‌ని ఉపయోగించి కూపన్ కోడ్‌ని స్కాన్ చేయండి",
-  "termsConditions_5": "ఏవైనా పన్నులు/చట్టబద్ధమైన లెవీలు (వర్తిస్తే) అదనంగా ఉంటాయి",
+  "termsConditions_5": "ఏవైనా పన్నులు/చట్టబద్ధమైన లెవీలు (వర్తిస్తే) అదనంగా ఉంటాయి & విజేత భరించాలి",
   "termsConditions_6": "ముందస్తు నోటీసు లేకుండా ఎప్పుడైనా ఈ ఆఫర్‌ను ఉపసంహరించుకునే లేదా సవరించే హక్కు JCBకి ఉంది",
   "termsConditions_7": "కస్టమర్‌కు ఎలాంటి చెల్లింపులు జరగకపోతే JCB బాధ్యత వహించదు",
   "termsConditions_8": "ఏదైనా వివాదం ముంబై అధికార పరిధికి మాత్రమే లోబడి ఉంటుంది మరియు భారత చట్టం వర్తిస్తుంది"
